syntax = "proto3";
option swift_prefix="SP";

package com.spotify.dac.api.v1.proto;

import "google/protobuf/any.proto";

message DacRequest {
    message ClientInfo {
        string app_name = 1;
        string version = 2;
    }
    string uri = 2;
    .google.protobuf.Any feature_request = 3;
    ClientInfo client_info = 4;
}

message DacResponse {
    .google.protobuf.Any component = 2;
    optional string home_logging_span_id = 3;
    optional bool is_home_fallback = 4;
}
